// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CxNavItem customize 1`] = `
<div>
  <li
    class="nav-item bazinga"
  >
    <h3
      aria-current="page"
      class="nav-link bazinga active disabled"
      disabled=""
      href="/bazinga"
    >
      Test
    </h3>
  </li>
</div>
`;

exports[`CxNavItem customize 2`] = `
<div>
  <li
    class="nav-item bazinga"
  >
    <h3
      aria-current="page"
      class="nav-link bazinga active disabled"
      disabled=""
      href="/bazinga"
    >
      Test
    </h3>
  </li>
</div>
`;

exports[`loads and displays CxNavItem component 1`] = `
<div>
  <li
    class="nav-item"
  >
    Test
  </li>
</div>
`;
